[gd_scene load_steps=4 format=3 uid="uid://nfr6o8yuv711"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_bk5yo"]
[ext_resource type="Texture2D" uid="uid://brn46dxv1awwk" path="res://art/monochrome-transparent_packed.png" id="3_rd47t"]
[ext_resource type="Theme" uid="uid://rbt4kjtnhrdu" path="res://themes/simple_theme.tres" id="4_m4yy2"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_bk5yo")

[node name="ScorePanel" type="Panel" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 43.0
offset_bottom = 32.0
size_flags_vertical = 0

[node name="CarrotLabel" type="Sprite2D" parent="ScorePanel"]
position = Vector2(9, 19)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_rd47t")
region_enabled = true
region_rect = Rect2(544, 320, 16, 16)

[node name="CarrotValue" type="Label" parent="ScorePanel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -12.0
offset_right = -3.0
offset_bottom = 2.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("4_m4yy2")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="ScorePanel"]
layout_mode = 0
offset_left = 4.0
offset_top = 3.0
offset_right = 31.0
offset_bottom = 11.0
theme = ExtResource("4_m4yy2")
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="KeyLabel" type="Sprite2D" parent="ScorePanel"]
visible = false
position = Vector2(9, 18)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_rd47t")
region_enabled = true
region_rect = Rect2(512, 176, 16, 16)

[node name="HealthTimer" type="Timer" parent="ScorePanel"]
wait_time = 0.5

[node name="HelpPanel" type="Panel" parent="."]
visible = false
offset_left = 72.0
offset_top = 56.0
offset_right = 88.0
offset_bottom = 72.0

[node name="PickHelp" type="Label" parent="HelpPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -5.0
offset_right = 3.0
offset_bottom = 9.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_m4yy2")
text = "E"

[node name="Welcome" type="ColorRect" parent="."]
offset_right = 160.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Title" type="Label" parent="Welcome"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -33.0
offset_right = 80.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_m4yy2")
theme_override_font_sizes/font_size = 18
text = "Carrots & Bears"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Instructions" type="Label" parent="Welcome"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 1.0
offset_right = 48.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_m4yy2")
text = "Pick all carrots and get home safely."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="TitleTimer" type="Timer" parent="Welcome"]
wait_time = 3.0
one_shot = true

[node name="GameOver" type="ColorRect" parent="."]
visible = false
offset_right = 160.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GameOverTitle" type="Label" parent="GameOver"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -33.0
offset_right = 80.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_m4yy2")
theme_override_font_sizes/font_size = 18
text = "You died."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="GameOverTimer" type="Timer" parent="GameOver"]
wait_time = 4.0

[connection signal="ready" from="Welcome/TitleTimer" to="." method="_on_title_timer_ready"]
[connection signal="timeout" from="Welcome/TitleTimer" to="." method="_on_title_timer_timeout"]
[connection signal="timeout" from="GameOver/GameOverTimer" to="." method="_on_game_over_timer_timeout"]
